# cargo-dist-explore

./: .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CHANGELOG_AUTOMATION_PLAN.md  Cargo.toml  README.md  RELEASE_PROCESS.md  TEST_RELEASE.md  cliff.toml  dist-workspace.toml  release-please-config.json  release.sh
.github/workflows/: changelog-pr.yml  release-on-merge.yml  release-please.yml  release-prepare.yml  release-publish.yml  release-tag.yml  release.yml
cli/: CHANGELOG.md  Cargo.toml
cli/src/: main.rs
scripts/: bump-version.sh
src/: main.rs
web/: Cargo.toml
web/src/: main.rs
